Configure ArgoCD to run in insecure mode for ingress

--- a/gitops/argocd/values.yaml
+++ b/gitops/argocd/values.yaml
@@ -1,6 +1,10 @@
 # ArgoCD Helm values
 # Used by deploy-argocd.sh
 
+configs:
+  params:
+    server.insecure: true
+
 server:
   service:
     type: LoadBalancer
